<resources>

    <string name="google_login">Connexion Google</string>
    <string name="google_login_2">Connexion Google 2</string>
    <string name="connect_progress">Connexion en cours</string>
    <string name="pokestop_map">Map des pokestops</string>
    <string name="launch_tracking">Tracking des pokestops</string>
    <string name="enter_code">Entrer code</string>
    <string name="disconnect">Déconnexion</string>


    <string name="start">Mise en route</string>
    <string name="stop">Arrêt</string>
    <string name="pokemons">Mes pokemons</string>

    <string name="title_activity_pokestop">Pokestops</string>
    <string name="title_activity_pokemons">Pokemons</string>
    <string name="access_location_needed">On a VRAIMENT besoin d\'accéder à la localisation</string>

    <string name="near_pokestop_title">Pokestop</string>
    <plurals name="near_pokestop_content">
        <item quantity="one">Vous êtes à portée de %1$d pokestop</item>
        <item quantity="other">Vous êtes à portée de %1$d pokestops</item>
    </plurals>

    <string name="pokestop_looted_title">Pokestop looté</string>
    <plurals name="pokestop_looted">
        <item quantity="one">Loot %1$d / %2$d pokestop</item>
        <item quantity="other">Loot %1$d / %2$d pokestops</item>
    </plurals>

    <string name="pokestop_updated">Pokestops</string>
    <string name="pokestop_updated_content">Nouvelle zone de pokestops chargée</string>

</resources>
